[package]
name = "ir"
version = "0.1.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>", "Luke I. Wilson <thelukaswils@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "ir" # for short-term testing purposes
path = "src/bin/main.rs"
